c2prj1_cards/grade.txt
Grading at Tue Jun 16 08:46:08 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:111:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t 0;
                 ^
cards.c:114:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t 1;
                 ^
cards.c:117:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t 2;
                 ^
cards.c:120:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t 3;
                 ^
Could not compile your card.c!

Overall Grade: FAILED
